Fixed margin issues in chat window Last message is now visible as it should be. Message input width is now equals window size (previously it could overlap or be smaller than chat message)

--- a/app/assets/stylesheets/_activity.sass
+++ b/app/assets/stylesheets/_activity.sass
@@ -67,6 +67,7 @@
   padding: 4px
   background: #F3F8F9
   color: #BDC6CA
+  margin-right: 10px
 
 
 .avatar
