--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -95,9 +95,10 @@ body
 .main-area
   width: $main-area-width
   float: left
-  padding-bottom: 70px
+  padding-bottom: 47px
   padding-top: 42px
-  height: 100%
+  padding-right: 15px
+  height: auto
 
 #channels
   height: 100%
