--- a/app/assets/stylesheets/_chat_area.sass
+++ b/app/assets/stylesheets/_chat_area.sass
@@ -164,10 +164,11 @@ html body #app_body .main-area #head-mask
   float: left
   border-top: 1px solid #f5f8f9
   padding: 10px 0px 10px 10px
-  width: 77.2%
+  width: 100%
   position: fixed
   bottom: 0px
-  margin-bottom: 20px
+  margin-bottom: 0px
+  left: 0px
   background: #e6edef
   z-index: 600
   textarea
